syntax = "proto3";

package api;

option go_package = "./internal/api";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Rusprofile wrapper API";
    version: "1.0";
    contact: {
      name: "Maintainer";
      url: "https://github.com/SeregaSergo";
      email: "khattu.s@mail.ru";
    };
  };
};

service Rusprofile {
  rpc GetCompanyInfo(SearchingInfo) returns (ReturnedCompanyInfo) {
    option (google.api.http) = {
      get: "/inn/{inn}"
    };
  }
}

message ReturnedCompanyInfo {
  message Person {
    string Surname = 1;
    string First_name = 2;
    string Middle_name = 3;
  }

  string inn = 1;
  string kpp = 2;
  string name = 3;
  Person chief = 4;
}

message SearchingInfo{
  string inn = 1;
}